--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/header/header";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
