--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,8 +1,60 @@
 @font-face {
+  font-family: "Alumni Sans";
+  font-weight: 600;
   font-style: normal;
-  font-weight: 400;
-  font-family: "";
-
   font-display: swap;
-  src: url("../fonts/.woff2") format("woff2");
+  src:
+    url("../fonts/alumni-sans-semibold.woff2") format("woff2"),
+    url("../fonts/alumni-sans-semibold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/alumni-sans-bold.woff2") format("woff2"),
+    url("../fonts/alumni-sans-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/alumni-sans-extrabold.woff2") format("woff2"),
+    url("../fonts/alumni-sans-extrabold.woff") format("woff");
+}
+
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/roboto-condensed-light.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/roboto-condensed-regular.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/roboto-condensed-bold.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-bold.woff") format("woff");
 }
