--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,11 +11,38 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
 $color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
+$color-torch-red:                   #ed0233;
+$color-venetian-red:                #b80027;
+$color-crimson:                     #d10a42;
+$color-black-russian:               #030a1a;
+$color-sapphire:                    #102654;
+$color-sapphire-light:              rgba(16, 38, 84, 0.5);
+$color-sapphire-accent:             rgba(16, 38, 84, 0.89);
+$color-resolution-blue:             #1c3374;
+$color-dark-cerulean:               #003d85;
+$color-smalt:                       #00359f;
+$color-egyptian-blue:               #103aae;
+$color-cobalt:                      #003eb7;
+$color-persian-blue:                #2e35ac;
+$color-chambray:                    #495a7d;
+$color-light-slate-grey:            #74819c;
+$color-grey-light:                  rgba(120, 120, 120, 0.2);
+$color-dark-gray:                   #afafaf;
+$color-spindle:                     #b6bdcc;
+$color-golden-yellow:               #ffdd00;
+$color-ghost-white:                 #f8f9fc;
+$color-whisper:                     #e8e8e8;
 
 // Gradient
 
 $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$promo-red-to-blue:                 conic-gradient(from 150.87deg at 16.03% 39.06%, $color-venetian-red -46.69deg, $color-dark-cerulean 32.24deg, $color-venetian-red 313.31deg, $color-dark-cerulean 392.24deg);
+$blue-to-white-right:               linear-gradient(to right, $color-sapphire 50%, $color-default-white 50%);
+$sale-red-to-blue:                  linear-gradient(to right bottom, $color-crimson, $color-smalt);
+$video-blue-to-red:                 linear-gradient(44.89deg, $color-dark-cerulean 25.38%, $color-venetian-red 74.89%);
+$video-red-to-blue:                 linear-gradient(to right, rgba($color-torch-red, 0.2), rgba($color-cobalt, 0.2));
+$catalog-red-to-blue:               linear-gradient(97.05deg, $color-torch-red 17.6%, $color-cobalt 95.31%);
+$advantages-red-to-blue:            linear-gradient(127.61deg, $color-crimson 0%, $color-cobalt 87.33%);
 
 // Typography
 // ---------------------------------
@@ -27,7 +54,8 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+$ff-roboto-condensed:                "Roboto Condensed", "Arial", sans-serif;
+$ff-alumni-sans:                     "Alumni Sans", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
@@ -43,12 +71,15 @@ $trans-600:                         0.6s $tf-default;
 // Viewports
 // ---------------------------------
 
+$tablet-width: 1199px;
+$mobile-width: 767px;
+
 $vp-320:                            320px;
 $vp-375:                            375px;
 $vp-768:                            768px;
-$vp-1024:                           1024px;
+$vp-1199:                           1199px;
 $vp-1280:                           1280px;
-$vp-1440:                           1440px;
+$vp-1366:                           1366px;
 $vp-1920:                           1920px;
 
 // Retina
