--- a/css/style.css
+++ b/css/style.css
@@ -385,11 +385,51 @@ template {
 }
 
 @font-face {
+  font-family: "Alumni Sans";
+  font-weight: 600;
   font-style: normal;
-  font-weight: 400;
-  font-family: "";
   font-display: swap;
-  src: url("../fonts/.woff2") format("woff2");
+  src: url("../fonts/alumni-sans-semibold.woff2") format("woff2"), url("../fonts/alumni-sans-semibold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/alumni-sans-bold.woff2") format("woff2"), url("../fonts/alumni-sans-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/alumni-sans-extrabold.woff2") format("woff2"), url("../fonts/alumni-sans-extrabold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/roboto-condensed-light.woff2") format("woff2"), url("../fonts/roboto-condensed-light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/roboto-condensed-regular.woff2") format("woff2"), url("../fonts/roboto-condensed-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/roboto-condensed-bold.woff2") format("woff2"), url("../fonts/roboto-condensed-bold.woff") format("woff");
 }
 
 *,
@@ -411,7 +451,7 @@ html {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: "Placeholder", "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -614,9 +654,160 @@ button,
 
 .container {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1160px;
   margin: 0 auto;
-  padding: 0 40px;
+}
+
+.header {
+  width: 100%;
+  background-image: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.header__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.header__logo {
+  color: #ffffff;
+}
+
+.header__tel {
+  width: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: end;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.header__tel-link {
+  color: #ffffff;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+  line-height: 31px;
+  letter-spacing: 0.8px;
+}
+
+.header__promo {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 0.12fr 0.31fr 1fr;
+  grid-template-columns: 0.12fr 0.31fr 1fr;
+  padding-left: 20px;
+  padding-right: 200px;
+  -webkit-column-gap: 1.3%;
+  -moz-column-gap: 1.3%;
+  column-gap: 1.3%;
+  margin-top: -30px;
+}
+
+.header__list {
+  padding: 0;
+  padding-top: 306px;
+  padding-bottom: 150px;
+  margin: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: end;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.header__item {
+  color: #ffffff;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.header__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-bottom: 48px;
+}
+
+.header__description p {
+  margin: 0;
+  margin-top: 110px;
+  margin-right: 53px;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 58px;
+  color: #ffffff;
+  text-align: end;
+  letter-spacing: 0.8px;
+}
+
+.header__description h1 {
+  margin: 0;
+  margin-top: 16px;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-size: 96px;
+  font-weight: 600;
+  line-height: 110px;
+  color: #ffffff;
+  text-align: end;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.header__link {
+  margin-left: 22px;
+  margin-right: 5px;
+  margin-top: 51px;
+  padding: 20px 55px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 14px;
+  color: #ffffff;
+  text-transform: uppercase;
+  outline: 4px solid #ffffff;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+
+.header__picture {
+  padding-left: 51px;
+}
+
+.header__picture img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .btn {
@@ -634,7 +825,7 @@ button,
 }
 
 .btn--red {
-  background-color: #ff1553;
+  background-color: #ed0233;
 }
 
 .btn:disabled {
@@ -1314,21 +1505,134 @@ button,
   }
 */
 
-@media (max-width: 1439px) {
+@media (max-width: 1199px) {
   .container {
-    padding: 0 32px;
+    padding: 0 45px;
   }
-}
 
-@media (max-width: 1023px) {
-  .container {
-    padding: 0 24px;
+  .header {
+    padding-top: 34px;
+    padding-bottom: 82px;
+  }
+
+  .header__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .header__logo svg {
+    width: 82px;
+    height: 17px;
+  }
+
+  .header__tel {
+    width: 60%;
+  }
+
+  .header__tel-link {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+    letter-spacing: 0.5px;
+  }
+
+  .header__promo {
+    margin-top: 19px;
+    padding: 0;
+  }
+
+  .header__list {
+    padding-top: 187px;
+    padding-bottom: 50px;
+  }
+
+  .header__description {
+    margin-bottom: 21px;
+  }
+
+  .header__description p {
+    font-size: 34px;
+    line-height: 41px;
+    margin-right: 7px;
+    margin-top: 50px;
+  }
+
+  .header__description h1 {
+    font-size: 72px;
+    line-height: 87px;
+    text-transform: none;
+    margin-top: 7px;
+  }
+
+  .header__link {
+    margin-top: 38px;
+    padding: 20px 32px;
+  }
+
+  .header__picture {
+    padding-left: 18px;
   }
 }
 
 @media (max-width: 767px) {
   .container {
-    padding: 0 16px;
+    padding: 0 15px;
+  }
+
+  .header {
+    padding-top: 16px;
+  }
+
+  .header__logo svg {
+    width: 69px;
+    height: 24px;
+  }
+
+  .header__tel-link {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+
+  .header__promo {
+    -ms-grid-columns: 0.4fr 0.6fr;
+    grid-template-columns: 0.4fr 0.6fr;
+    gap: 0;
+    position: relative;
+    max-width: 410px;
+    margin: 0 auto;
+  }
+
+  .header__list {
+    padding-top: 194px;
+  }
+
+  .header__description p {
+    font-size: 28px;
+    line-height: 34px;
+    margin-right: 4px;
+    margin-top: 69px;
+  }
+
+  .header__description h1 {
+    margin-left: -10px;
+    margin-top: 12px;
+  }
+
+  .header__link {
+    margin: 0;
+    position: absolute;
+    top: 102%;
+    left: 1%;
+    right: 1%;
+  }
+
+  .header__picture {
+    display: none;
   }
 
   .modal__wrapper {
