--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -73,6 +73,7 @@ $trans-600:                         0.6s $tf-default;
 
 $tablet-width: 1199px;
 $mobile-width: 767px;
+$mobile-medium-width: 600px;
 
 $vp-320:                            320px;
 $vp-375:                            375px;
