--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,11 @@
 // ---------------------------------
 
 @import "blocks/header/header";
+@import "blocks/footer/footer";
+@import "blocks/main/gym";
+@import "blocks/main/video";
+@import "blocks/main/tabs";
+@import "blocks/main/data-tabs";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
