--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/main/video";
 @import "blocks/main/tabs";
 @import "blocks/main/data-tabs";
+@import "blocks/main/event";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
