--- a/css/style.css
+++ b/css/style.css
@@ -1020,7 +1020,7 @@ button,
   background-color: #f8f9fc;
 }
 
-.tabs h1 {
+.tabs h2 {
   margin: 0;
   padding-top: 120px;
   text-align: center;
@@ -1103,6 +1103,7 @@ button,
   -webkit-transition: height 0.3s;
   -o-transition: height 0.3s;
   transition: height 0.3s;
+  min-height: 566px;
 }
 
 .tabs__element {
@@ -1162,11 +1163,11 @@ button,
 }
 
 .tabs__component p {
-  padding-top: 50px;
-  padding-bottom: 5px;
+  padding-top: 55px;
+  padding-bottom: 10px;
   font-weight: 700;
-  font-size: 22px;
-  line-height: 24px;
+  font-size: 26px;
+  line-height: 29px;
 }
 
 .tabs__component:focus,
@@ -1213,8 +1214,8 @@ button,
 }
 
 .tabs__text {
-  margin-top: 55px;
-  margin-bottom: 22px;
+  margin-top: 65px;
+  margin-bottom: 27px;
   margin-left: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1293,6 +1294,158 @@ button,
   z-index: 1;
   visibility: visible;
   opacity: 1;
+}
+
+.event__content-wrapper {
+  padding-top: 120px;
+  padding-bottom: 56px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: -webkit-max-content 1fr;
+  -ms-grid-columns: max-content 1fr;
+  grid-template-columns: -webkit-max-content 1fr;
+  grid-template-columns: max-content 1fr;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+}
+
+.event__content {
+  max-width: 500px;
+  background-color: #ed0233;
+  padding: 81px 75px 85px 76px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2.18fr 1fr;
+  grid-template-columns: 2.18fr 1fr;
+  -webkit-column-gap: 48px;
+  -moz-column-gap: 48px;
+  column-gap: 48px;
+}
+
+.event__content h2 {
+  margin: 5px 0 0 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 82px;
+  line-height: 79px;
+  letter-spacing: 0.03em;
+}
+
+.event__content h3 {
+  margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.event__content dl {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: -webkit-max-content;
+  -ms-grid-columns: max-content;
+  grid-template-columns: -webkit-max-content;
+  grid-template-columns: max-content;
+  margin: 0;
+}
+
+.event__item dt {
+  text-align: center;
+  padding-right: 51px;
+}
+
+.event__item dd {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  margin: 0;
+}
+
+.event__item dd::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  top: 3px;
+  background-color: #ffffff;
+}
+
+.event__item p {
+  margin: 0;
+  margin-right: 5px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.event__item span {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.event__link {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  margin-top: 13px;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  width: 100%;
+  border: 4px solid #ffffff;
+  color: #ffffff;
+  background-color: transparent;
+  text-align: center;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  -ms-grid-row-align: end;
+  -ms-grid-column-align: end;
+  place-self: end;
+}
+
+.event__link:hover {
+  color: #102654;
+  background-color: #ffffff;
+  opacity: 0.7;
+}
+
+.event__link:focus-visible {
+  outline: none;
+  border-color: #ffdd00;
+}
+
+.event__link:active {
+  opacity: 1;
+}
+
+.event__link:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.event__img-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .btn {
@@ -2147,7 +2300,7 @@ button,
     height: 73px;
   }
 
-  .tabs h1 {
+  .tabs h2 {
     font-size: 42px;
     line-height: 50px;
     padding-top: 101px;
@@ -2170,10 +2323,82 @@ button,
     bottom: 0;
   }
 
+  .tabs__content {
+    margin-bottom: 58px;
+  }
+
   .tabs__element {
     -ms-grid-columns: (1fr)[1];
     grid-template-columns: repeat(1, 1fr);
     padding: 43px 163px;
+  }
+
+  .tabs__component p {
+    padding-top: 55px;
+    padding-bottom: 12px;
+  }
+
+  .tabs__text {
+    margin-top: 61px;
+    margin-bottom: 24px;
+  }
+
+  .event__content-wrapper {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .event__content {
+    max-width: 292px;
+    padding: 46px 44px 50px;
+    -webkit-column-gap: 25px;
+    -moz-column-gap: 25px;
+    column-gap: 25px;
+  }
+
+  .event__content h2 {
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 48px;
+    line-height: 46px;
+  }
+
+  .event__content h3 {
+    font-size: 12px;
+  }
+
+  .event__content dl {
+    -webkit-transform: translateX(3px);
+    -ms-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+
+  .event__item {
+    padding-left: 5px;
+  }
+
+  .event__item p {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .event__item span {
+    font-size: 10px;
+    line-height: 15px;
+  }
+
+  .event__link {
+    margin-top: 29px;
+    font-size: 10px;
+    line-height: 12px;
+    border-width: 2px;
+    padding: 12.5px 15px;
+    width: 91%;
+    -ms-grid-row-align: start;
+    -ms-grid-column-align: start;
+    place-self: start;
   }
 }
 
@@ -2328,7 +2553,7 @@ button,
     transform: translate(2px, 0.5px);
   }
 
-  .tabs h1 {
+  .tabs h2 {
     font-size: 32px;
     line-height: 38px;
     padding-top: 64px;
@@ -2345,6 +2570,10 @@ button,
     gap: 45px;
   }
 
+  .tabs__content {
+    margin-bottom: 37px;
+  }
+
   .tabs__element {
     padding: 35px 15px;
   }
@@ -2356,6 +2585,12 @@ button,
   .tabs__component p {
     padding-top: 43px;
     padding-bottom: 9px;
+    font-size: 22px;
+    line-height: 24px;
+  }
+
+  .tabs__text {
+    margin-top: 53px;
   }
 
   .tabs__text p,
@@ -2368,6 +2603,34 @@ button,
   .tabs__text p::before {
     font-size: 80px;
     text-shadow: -16px -21px 0 #e8e8e8;
+  }
+
+  .event__content-wrapper {
+    padding-top: 70px;
+    padding-bottom: 43px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .event__content {
+    max-width: 100%;
+    padding: 46px 33px 50px;
+    padding-right: 21px;
+    -webkit-column-gap: 15px;
+    -moz-column-gap: 15px;
+    column-gap: 15px;
+  }
+
+  .event__content h3 {
+    margin-left: 10px;
+  }
+
+  .event__link {
+    -ms-grid-row-align: end;
+    -ms-grid-column-align: end;
+    place-self: end;
+    width: 86%;
+    margin-right: 22px;
   }
 
   .modal__wrapper {
