--- a/source/sass/blocks/main/tabs.scss
+++ b/source/sass/blocks/main/tabs.scss
@@ -126,17 +126,17 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px;
-  padding: 37px 105px;
+  padding: 37px 0;
   width: 100%;
   margin: 0;
 
   @media (max-width: $tablet-width) {
     grid-template-columns: repeat(1, 1fr);
-    padding: 43px 163px;
+    padding: 43px 118px;
   }
 
   @media (max-width: $mobile-width) {
-    padding: 35px 15px;
+    padding: 35px 0;
   }
 
   p {
