--- a/css/style.css
+++ b/css/style.css
@@ -1978,7 +1978,7 @@ button,
   -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
   gap: 40px;
-  padding: 37px 105px;
+  padding: 37px 0;
   width: 100%;
   margin: 0;
 }
@@ -3517,7 +3517,7 @@ button,
   .tabs__element {
     -ms-grid-columns: (1fr)[1];
     grid-template-columns: repeat(1, 1fr);
-    padding: 43px 163px;
+    padding: 43px 118px;
   }
 
   .tabs__component p {
@@ -3859,7 +3859,7 @@ button,
   }
 
   .tabs__element {
-    padding: 35px 15px;
+    padding: 35px 0;
   }
 
   .tabs__component {
