--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "blocks/main/event";
 @import "blocks/main/comments";
 @import "blocks/main/coaches";
+@import "blocks/main/advantages";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
