--- a/css/style.css
+++ b/css/style.css
@@ -2421,7 +2421,7 @@ button,
 
 .coaches {
   padding-top: 50px;
-  padding-bottom: 90px;
+  padding-bottom: 140px;
 }
 
 .coaches__container {
@@ -2627,6 +2627,147 @@ button,
 .coaches__button:active::before {
   border-bottom: 1px solid #ed0233;
   border-left: 1px solid #ed0233;
+}
+
+.advantages {
+  background-color: #f8f9fc;
+  padding-top: 97px;
+}
+
+.advantages h2 {
+  color: #102654;
+  font-weight: 600;
+  font-size: 54px;
+  line-height: 65px;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  text-align: center;
+  margin: 0;
+  padding-left: 10px;
+  letter-spacing: 1.5px;
+}
+
+.advantages__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1.56fr 1fr 1.56fr;
+  grid-template-columns: 1.56fr 1fr 1.56fr;
+  -webkit-column-gap: 3.3%;
+  -moz-column-gap: 3.3%;
+  column-gap: 3.3%;
+  padding: 0 54px;
+  padding-top: 30px;
+  row-gap: 110px;
+}
+
+.advantages__content-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: -webkit-min-content 1fr;
+  -ms-grid-columns: min-content 1fr;
+  grid-template-columns: -webkit-min-content 1fr;
+  grid-template-columns: min-content 1fr;
+  -webkit-column-gap: 9.1%;
+  -moz-column-gap: 9.1%;
+  column-gap: 9.1%;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  padding: 20px 11px 20px 27px;
+}
+
+.advantages__content-item--second {
+  background-color: #1c3374;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr;
+  text-align: center;
+  margin-top: 25px;
+  padding-bottom: 57px;
+}
+
+.advantages__count span {
+  display: block;
+  font-weight: 700;
+  font-size: 71px;
+  line-height: 107px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  color: transparent;
+  background-image: -o-linear-gradient(322.39deg, #d10a42 0%, #003eb7 87.33%);
+  background-image: linear-gradient(127.61deg, #d10a42 0%, #003eb7 87.33%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  margin-top: -23px;
+}
+
+.advantages__count p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  color: #2e35ac;
+  margin: 0;
+  margin-top: -21px;
+}
+
+.advantages__count--second span {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 74px;
+  line-height: 111px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  padding-top: 38px;
+  padding-right: 19px;
+}
+
+.advantages__count--second p {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 39px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  margin-top: -16px;
+  padding-right: 14px;
+}
+
+.advantages__description h3 {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 33px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  color: #102654;
+  margin: 0;
+}
+
+.advantages__description span {
+  display: block;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 22px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  color: #102654;
+  margin-top: 6px;
+}
+
+.advantages__description--second span {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  margin-top: 33px;
+  padding-right: 14px;
+}
+
+.advantages__description--second p {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 22px;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  color: #102654;
 }
 
 .btn {
@@ -3684,6 +3825,104 @@ button,
     transform: translate(3px, 10px);
     margin: 0;
   }
+
+  .advantages {
+    padding-top: 90px;
+  }
+
+  .advantages {
+    padding-top: 62px;
+  }
+
+  .advantages h2 {
+    margin-bottom: 29px;
+    font-size: 42px;
+    line-height: 51px;
+    padding-left: 0;
+    padding-right: 24px;
+    letter-spacing: 1.3px;
+  }
+
+  .advantages__content {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    -webkit-column-gap: 30px;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
+    row-gap: 0;
+  }
+
+  .advantages__content-item {
+    -webkit-column-gap: 8.8%;
+    -moz-column-gap: 8.8%;
+    column-gap: 8.8%;
+    padding: 0 6px 0 0;
+  }
+
+  .advantages__content-item--second {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    margin-top: 45px;
+    padding-bottom: 38px;
+    -ms-grid-row-align: center;
+    -ms-grid-column-align: center;
+    place-self: center;
+    min-width: 442px;
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .advantages__count span {
+    font-size: 58px;
+    line-height: 87px;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
+  .advantages__count--second span {
+    font-size: 74px;
+    line-height: 73px;
+    margin-bottom: 0;
+    padding-top: 34px;
+    padding-right: 0;
+  }
+
+  .advantages__count--second p {
+    font-size: 22px;
+    line-height: 33px;
+    margin-top: 0;
+    padding-right: 0;
+    padding-left: 5px;
+  }
+
+  .advantages__description h3 {
+    margin-bottom: 0;
+    margin-top: 14px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .advantages__description span {
+    margin-top: 0;
+  }
+
+  .advantages__description--second {
+    max-width: 180px;
+    margin: 0 auto;
+  }
+
+  .advantages__description--second span {
+    padding-right: 0;
+    margin-top: 13px;
+    padding-left: 5px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -4038,6 +4277,70 @@ button,
     -webkit-transform: translate(10px, 13px);
     -ms-transform: translate(10px, 13px);
     transform: translate(10px, 13px);
+  }
+
+  .advantages h2 {
+    font-size: 32px;
+    line-height: 39px;
+    padding-right: 15px;
+    margin-bottom: 29px;
+    letter-spacing: 1px;
+  }
+
+  .advantages__container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .advantages__content {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    row-gap: 22px;
+    -webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0;
+  }
+
+  .advantages__content-item {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    text-align: center;
+    padding: 0;
+  }
+
+  .advantages__content-item--second {
+    min-width: 100%;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    margin: 25px 0 8px;
+    padding: 36px 30px 42px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+
+  .advantages__count--second span {
+    padding-top: 2px;
+    padding-right: 3px;
+  }
+
+  .advantages__count--second p {
+    margin-top: -4px;
+    padding-left: 0;
+  }
+
+  .advantages__description h3 {
+    margin-top: 8px;
+  }
+
+  .advantages__description span {
+    max-width: 230px;
+    margin: 0 auto;
+  }
+
+  .advantages__description--second span {
+    margin-top: 9px;
   }
 
   .modal__wrapper {
