--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/main/comments";
 @import "blocks/main/coaches";
 @import "blocks/main/advantages";
+@import "blocks/main/special";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
