--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -38,7 +38,7 @@ $color-whisper:                     #e8e8e8;
 $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
 $promo-red-to-blue:                 conic-gradient(from 150.87deg at 16.03% 39.06%, $color-venetian-red -46.69deg, $color-dark-cerulean 32.24deg, $color-venetian-red 313.31deg, $color-dark-cerulean 392.24deg);
 $blue-to-white-right:               linear-gradient(to right, $color-sapphire 50%, $color-default-white 50%);
-$sale-red-to-blue:                  linear-gradient(to right bottom, $color-crimson, $color-smalt);
+$special-red-to-blue:                  linear-gradient(to right bottom, $color-crimson, $color-smalt);
 $video-blue-to-red:                 linear-gradient(44.89deg, $color-dark-cerulean 25.38%, $color-venetian-red 74.89%);
 $video-red-to-blue:                 linear-gradient(to right, rgba($color-torch-red, 0.2), rgba($color-cobalt, 0.2));
 $catalog-red-to-blue:               linear-gradient(97.05deg, $color-torch-red 17.6%, $color-cobalt 95.31%);
