--- a/source/sass/blocks/main/comments.scss
+++ b/source/sass/blocks/main/comments.scss
@@ -70,6 +70,11 @@
   }
 }
 
+.comments__list {
+  margin: 0;
+  padding: 0;
+}
+
 .comments__swiper {
   width: 675px;
   margin: 0 auto;
@@ -137,44 +142,65 @@
 }
 
 .comments__button {
-  color: $color-dark-gray;
+  &::before {
+    content: "";
+    display: block;
+    width: 23px;
+    height: 23px;
+    border: 1px solid $color-dark-gray;
+    border-top: none;
+    border-right: none;
+    transform: rotate(45deg);
+
+    @media (max-width: $mobile-width) {
+      width: 14px;
+      height: 14px;
+    }
+  }
+
 
   &--prev {
-    left: 2px;
+    left: 4px;
 
     @media (max-width: $tablet-width) {
-      left: 43px;
+      left: 47px;
     }
 
     @media (max-width: $mobile-width) {
-      left: 11px;
+      left: 10px;
     }
   }
 
   &--next {
-    right: 2px;
+    right: 4px;
+
+    &::before {
+      transform: rotate(-135deg);
+    }
 
     @media (max-width: $tablet-width) {
-      right: 43px;
+      right: 47px;
     }
 
     @media (max-width: $mobile-width) {
-      right: 11px;
+      right: 10px;
     }
   }
 
+  &:focus,
   &:hover {
-    color: $color-dark-cerulean;
-    opacity: 0.7;
-  }
-
-  &:focus-visible {
     outline: none;
-    box-shadow: 0 0 0 2px $color-torch-red;
+
+    &::before {
+      border-bottom: 1px solid $color-dark-cerulean;
+      border-left: 1px solid $color-dark-cerulean;
+    }
   }
 
   &:active {
-    box-shadow: none;
-    opacity: 1;
+    &::before {
+      border-bottom: 1px solid $color-torch-red;
+      border-left: 1px solid $color-torch-red;
+    }
   }
 }
