--- a/css/style.css
+++ b/css/style.css
@@ -2354,6 +2354,11 @@ button,
   grid-column: 2/3;
 }
 
+.comments__list {
+  margin: 0;
+  padding: 0;
+}
+
 .comments__swiper {
   width: 675px;
   margin: 0 auto;
@@ -2390,33 +2395,47 @@ button,
   object-fit: cover;
 }
 
-.comments__button {
-  color: #afafaf;
+.comments__button::before {
+  content: "";
+  display: block;
+  width: 23px;
+  height: 23px;
+  border: 1px solid #afafaf;
+  border-top: none;
+  border-right: none;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .comments__button--prev {
-  left: 2px;
+  left: 4px;
 }
 
 .comments__button--next {
-  right: 2px;
+  right: 4px;
 }
 
+.comments__button--next::before {
+  -webkit-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.comments__button:focus,
 .comments__button:hover {
-  color: #003d85;
-  opacity: 0.7;
-}
-
-.comments__button:focus-visible {
   outline: none;
-  -webkit-box-shadow: 0 0 0 2px #ed0233;
-  box-shadow: 0 0 0 2px #ed0233;
 }
 
-.comments__button:active {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  opacity: 1;
+.comments__button:focus::before,
+.comments__button:hover::before {
+  border-bottom: 1px solid #003d85;
+  border-left: 1px solid #003d85;
+}
+
+.comments__button:active::before {
+  border-bottom: 1px solid #ed0233;
+  border-left: 1px solid #ed0233;
 }
 
 .coaches {
@@ -2632,6 +2651,7 @@ button,
 .advantages {
   background-color: #f8f9fc;
   padding-top: 97px;
+  padding-bottom: 115px;
 }
 
 .advantages h2 {
@@ -2768,6 +2788,184 @@ button,
   line-height: 22px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
   color: #102654;
+}
+
+.special__wrapper {
+  padding-top: 99px;
+  padding-bottom: 80px;
+  color: #1c3374;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 23px;
+}
+
+.special__wrapper h2 {
+  margin: 0;
+  margin-bottom: 34px;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 54px;
+  line-height: 65px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #102654;
+}
+
+.special__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3.5%;
+}
+
+.special__subscription-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.special__subscription {
+  padding: 33px 45px 43px;
+  color: #ffffff;
+  background-color: #ed0233;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.special__subscription h3 {
+  margin: 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 44px;
+}
+
+.special__subscription p {
+  margin: 0;
+  margin-top: -25px;
+  margin-bottom: -2px;
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 110px;
+}
+
+.special__subscription span {
+  margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.special__link {
+  width: 78px;
+  margin-top: auto;
+  padding: 0 0 2px 0;
+  border: none;
+  border-bottom: 2px solid #1c3374;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+  color: #1c3374;
+  text-align: left;
+}
+
+.special__link:hover {
+  opacity: 0.5;
+}
+
+.special__link:focus-visible {
+  outline: none;
+  -webkit-box-shadow: 0 0 0 2px #ffdd00;
+  box-shadow: 0 0 0 2px #ffdd00;
+}
+
+.special__link:active {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  opacity: 1;
+}
+
+.special__link--subscription {
+  border-color: #ffffff;
+  color: #ffffff;
+}
+
+.special__link--list {
+  width: 70px;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.special__link--list:focus-visible {
+  outline: none;
+  -webkit-box-shadow: 0 0 0 2px #d10a42;
+  box-shadow: 0 0 0 2px #d10a42;
+}
+
+.special__img-wrapper img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.special__list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (fr)[2];
+  grid-template-columns: repeat(2, fr);
+  grid-auto-rows: 1fr;
+  row-gap: 40px;
+  margin: 0;
+  padding: 0;
+}
+
+.special__item {
+  padding: 22px 34px 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+}
+
+.special__item::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 8px solid #d10a42;
+  -o-border-image: -o-linear-gradient(left top, #d10a42, #00359f);
+  border-image: -webkit-gradient(linear, left top, right bottom, from(#d10a42), to(#00359f));
+  border-image: linear-gradient(to right bottom, #d10a42, #00359f);
+  border-image-slice: 1;
+  pointer-events: none;
+}
+
+.special__item p {
+  margin: 0;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 44px;
+}
+
+.special__item span {
+  margin-bottom: 10px;
 }
 
 .btn {
@@ -3758,11 +3956,11 @@ button,
   }
 
   .comments__button--prev {
-    left: 43px;
+    left: 47px;
   }
 
   .comments__button--next {
-    right: 43px;
+    right: 47px;
   }
 
   .coaches {
@@ -3828,10 +4026,7 @@ button,
 
   .advantages {
     padding-top: 90px;
-  }
-
-  .advantages {
-    padding-top: 62px;
+    padding-bottom: 94px;
   }
 
   .advantages h2 {
@@ -3922,6 +4117,57 @@ button,
     padding-right: 0;
     margin-top: 13px;
     padding-left: 5px;
+  }
+
+  .special__wrapper {
+    padding-top: 91px;
+  }
+
+  .special__wrapper h2 {
+    -webkit-transform: translateX(-4px);
+    -ms-transform: translateX(-4px);
+    transform: translateX(-4px);
+    margin-bottom: 40px;
+    font-size: 42px;
+    line-height: 51px;
+  }
+
+  .special__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .special__subscription-wrapper {
+    margin-bottom: 30px;
+    -ms-grid-columns: -webkit-max-content 1fr;
+    -ms-grid-columns: max-content 1fr;
+    grid-template-columns: -webkit-max-content 1fr;
+    grid-template-columns: max-content 1fr;
+  }
+
+  .special__subscription {
+    max-width: 280px;
+  }
+
+  .special__list {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 4.5%;
+    -moz-column-gap: 4.5%;
+    column-gap: 4.5%;
+  }
+
+  .special__item {
+    min-height: 211px;
+  }
+
+  .special__item span {
+    letter-spacing: 0.01em;
   }
 }
 
@@ -4206,12 +4452,17 @@ button,
     height: 68px;
   }
 
+  .comments__button::before {
+    width: 14px;
+    height: 14px;
+  }
+
   .comments__button--prev {
-    left: 11px;
+    left: 10px;
   }
 
   .comments__button--next {
-    right: 11px;
+    right: 10px;
   }
 
   .coaches {
@@ -4279,6 +4530,11 @@ button,
     transform: translate(10px, 13px);
   }
 
+  .advantages {
+    padding-top: 62px;
+    padding-bottom: 64px;
+  }
+
   .advantages h2 {
     font-size: 32px;
     line-height: 39px;
@@ -4341,6 +4597,57 @@ button,
 
   .advantages__description--second span {
     margin-top: 9px;
+  }
+
+  .special__wrapper {
+    padding-top: 63px;
+    padding-bottom: 50px;
+  }
+
+  .special__wrapper h2 {
+    -webkit-transform: translateX(-3px);
+    -ms-transform: translateX(-3px);
+    transform: translateX(-3px);
+    margin-bottom: 42px;
+    font-size: 32px;
+    line-height: 39px;
+  }
+
+  .special__subscription-wrapper {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+  }
+
+  .special__subscription {
+    max-width: 100%;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .special__subscription p {
+    margin-bottom: -6px;
+  }
+
+  .special__list {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+
+  .special__item {
+    padding-top: 32px;
+    padding-bottom: 43px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .special__item p {
+    margin-bottom: 2px;
   }
 
   .modal__wrapper {
