--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,8 @@
 @import "blocks/main/coaches";
 @import "blocks/main/advantages";
 @import "blocks/main/special";
+@import "blocks/main/contacts";
+@import "blocks/main/form";
 @import "blocks/btn";
 @import "blocks/modal";
 @import "blocks/custom-input";
