--- a/source/sass/blocks/header/header.scss
+++ b/source/sass/blocks/header/header.scss
@@ -16,12 +16,13 @@
 }
 
 .header__navigation {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
 }
 
 .header__logo {
+  grid-column: 1/2;
   color: $color-default-white;
 
   @media (max-width: $tablet-width) {
@@ -43,14 +44,17 @@
 }
 
 .header__tel {
-  width: 15%;
-  display: flex;
-  justify-content: end;
-  flex-wrap: wrap;
+  place-self: start end;
+  grid-column: 2/3;
   gap: 15px;
+  max-width: 30%;
 
   @media (max-width: $tablet-width) {
-    width: 60%;
+    max-width: 60%;
+  }
+
+  @media (max-width: $mobile-width) {
+    max-width: 100%;
   }
 }
 
