--- a/source/sass/blocks/main/special.scss
+++ b/source/sass/blocks/main/special.scss
@@ -124,6 +124,7 @@
   padding: 0 0 2px 0;
   border: none;
   border-bottom: 2px solid $color-resolution-blue;
+  user-select: none;
 
   font-weight: 700;
   font-size: 14px;
