--- a/source/sass/blocks/footer/footer.scss
+++ b/source/sass/blocks/footer/footer.scss
@@ -47,6 +47,15 @@
       padding-bottom: 0;
     }
   }
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .footer__navigation {
@@ -105,10 +114,20 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
+  user-select: none;
 
   @media (max-width: $mobile-width) {
     font-size: 16px;
     line-height: 19px;
+  }
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
 
@@ -119,4 +138,15 @@
   column-gap: 11px;
   margin: 0;
   padding: 0;
+
+  a {
+    &:hover,
+    &:focus {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
 }
