--- a/source/sass/blocks/main/coaches.scss
+++ b/source/sass/blocks/main/coaches.scss
@@ -174,6 +174,12 @@
   place-items: end center;
   padding: 23px;
 
+  &--tzinch {
+    h3 {
+      color: $color-sapphire;
+    }
+  }
+
   @media (max-width: $tablet-width) {
     padding-bottom: 30px;
     padding-left: 32px;
