--- a/source/sass/blocks/main/form.scss
+++ b/source/sass/blocks/main/form.scss
@@ -132,4 +132,19 @@
   padding-bottom: 16px;
   color: $color-default-white;
   background-color: transparent;
+  cursor: pointer;
+  user-select: none;
+
+  &:hover,
+  &:focus {
+    color: $color-sapphire;
+    background-color: $color-default-white;
+    opacity: 0.7;
+  }
+
+  &:active {
+    color: $color-sapphire;
+    background-color: $color-default-white;
+    opacity: 0.3;
+  }
 }
