--- a/source/sass/blocks/main/event.scss
+++ b/source/sass/blocks/main/event.scss
@@ -79,7 +79,8 @@
     }
 
     @media (max-width: $mobile-width) {
-      margin-left: 10px;
+      text-align: center;
+      margin-right: 27px;
     }
   }
 
