--- a/source/sass/blocks/main/special.scss
+++ b/source/sass/blocks/main/special.scss
@@ -68,7 +68,6 @@
 
   @media (max-width: $mobile-width) {
     grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
   }
 }
 
@@ -115,6 +114,10 @@
     margin-bottom: 10px;
     font-size: 18px;
     line-height: 26px;
+
+    @media (max-width: $mobile-width) {
+      margin-bottom: 26px;
+    }
   }
 }
 
@@ -125,7 +128,7 @@
   border: none;
   border-bottom: 2px solid $color-resolution-blue;
   user-select: none;
-
+  letter-spacing: 0.5px;
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
@@ -156,6 +159,7 @@
     width: 70px;
     font-size: 12px;
     line-height: 16px;
+    padding: 0 0 1px 0;
 
     &:focus-visible {
       outline: none;
@@ -175,7 +179,6 @@
 .special__list {
   display: grid;
   grid-template-columns: repeat(2, fr);
-  grid-auto-rows: 1fr;
   row-gap: 40px;
   margin: 0;
   padding: 0;
@@ -192,7 +195,7 @@
 }
 
 .special__item {
-  padding: 22px 34px 32px;
+  padding: 22px 34px 34px;
   display: flex;
   flex-direction: column;
   position: relative;
