--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -72,6 +72,7 @@ $trans-600:                         0.6s $tf-default;
 // ---------------------------------
 
 $tablet-width: 1199px;
+$tablet-medium-width: 900px;
 $mobile-width: 767px;
 $mobile-medium-width: 600px;
 
